@@ -38,6 +38,7 @@
 - fix fix master map type check.
 - init qdn before use in get_query_dn().
 - fix typo in update_hosts_mounts().
+- fix hosts map update on reload.
 
 04/06/2014 autofs-5.1.0
 =======================
